# bird-docs-query-mcp

./: .gitignore  README.md  fetcher.py  pyproject.toml  server.py
tests/: test_fetcher.py  test_server.py  test_stdio.py
tests/fixtures/: llms.txt  manifest.json
